cmake_minimum_required(VERSION 2.8)
ADD_SUBDIRECTORY(nn)
ADD_SUBDIRECTORY(graph)
ADD_SUBDIRECTORY(nngraph)
ADD_SUBDIRECTORY(nnx)
ADD_SUBDIRECTORY(threads)
ADD_SUBDIRECTORY(argcheck)

IF (WITH_LWDA STREQUAL ON)
 ADD_SUBDIRECTORY(lwtorch)
 ADD_SUBDIRECTORY(lwnn)
 ADD_SUBDIRECTORY(lwnnx)
 ADD_SUBDIRECTORY(lwdnn)
ENDIF (WITH_LWDA STREQUAL ON)
