#
# Copyright (c) 2012 Cisco Systems, Inc.  All rights reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

# This Makefile is not traversed during a normal "make all" in an OMPI
# build.  It *is* traversed during "make dist", however.  So you can
# put EXTRA_DIST targets in here.
#
# You can also use this as a colwenience for building this MPI
# extension (i.e., "make all" in this directory to ilwoke "make all"
# in all the subdirectories).

SUBDIRS = c mpif-h use-mpi use-mpi-f08

EXTRA_DIST = README.txt
