CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.8)

SET(CMAKE_MODULE_PATH "${CMAKE_LWRRENT_SOURCE_DIR}/cmake" "${CMAKE_MODULE_PATH}")

FIND_PACKAGE(Torch REQUIRED)
FIND_PACKAGE(LWCA 6.5 REQUIRED)

INCLUDE_DIRECTORIES("${Torch_INSTALL_INCLUDE}/THC")
LINK_DIRECTORIES("${Torch_INSTALL_LIB}")

FILE(STRINGS lib/THLWNN/THLWNN.h THLWNN_headers NEWLINE_CONSUME)
FILE(WRITE THLWNN_h.lua "return [[")
FILE(APPEND THLWNN_h.lua ${THLWNN_headers})
FILE(APPEND THLWNN_h.lua "]]")

FILE(STRINGS lib/THLWNN/generic/THLWNN.h THLWNN_generic_headers NEWLINE_CONSUME)
FILE(WRITE THLWNN_generic_h.lua "return [[")
FILE(APPEND THLWNN_generic_h.lua ${THLWNN_generic_headers})
FILE(APPEND THLWNN_generic_h.lua "]]")

FILE(GLOB luasrc *.lua)

ADD_SUBDIRECTORY(lib)

INSTALL(
  FILES
  ${luasrc}
  DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/lwnn")
